# egtr

./: .gitignore  Makefile  pyproject.toml
data/: carla_dataset.py  preprocess_carla_dataset.py
egtr/: deformable_detr.py  egtr.py  relations.py  tools.py
egtr/data/: carla_dataset.py  visual_genome.py
lib/: pytorch_misc.py
lib/evaluation/: sg_eval.py
lib/fpn/box_intersections_cpu/: bbox.c  bbox.pyx
tools/evaluate/: evaluate_detr_carla.sh  evaluate_egtr.py
tools/preprocess/: preprocess_carla_dataset.py  run_preprocess_carla_dataset.sh
tools/pretrain/: detr_lightning.py  download_resnet_backbone.py  pretrain_detr.py  pretrain_detr_carla.sh  run_pretrain_detr_carla.sh
tools/train/: egtr_lightning.py  run_train_egtr_carla.sh  train_egtr.py
